# param-decomp

./: .gitignore  CLAUDE.md  MANIFEST.in  Makefile  README.md  midterm.md  paper.md  pyproject.toml
param_decomp_lab/: README.md  batch_and_loss_fns.py  component_model_io.py  distributed.py  pyproject.toml  run_sink.py  seed.py
param_decomp_lab/adapters/: __init__.py  base.py  clt.py  pd.py  transcoder.py
param_decomp_lab/app/: CLAUDE.md  README.md  __init__.py  run_app.py
param_decomp_lab/app/backend/: compute.py  database.py  dependencies.py  optim_cis.py  server.py  state.py  utils.py
param_decomp_lab/app/backend/routers/: __init__.py  activation_contexts.py  agents.py  autointerp_compare.py  clusters.py  correlations.py  data_sources.py  dataset_attributions.py  dataset_search.py  graph_interp.py  graphs.py  intervention.py  investigations.py  mcp.py  pretrain_info.py  prompts.py  run_registry.py  runs.py
param_decomp_lab/app/frontend/src/lib/: registry.ts
param_decomp_lab/autointerp/: CLAUDE.md  config.py  db.py  interpret.py  llm_api.py  prompt_helpers.py  repo.py  schemas.py
param_decomp_lab/autointerp/scoring/: detection.py  fuzzing.py
param_decomp_lab/autointerp/scoring/scripts/: run_label_scoring.py
param_decomp_lab/autointerp/scripts/: render_prompt.py  run_interpret.py  run_slurm.py  run_slurm_cli.py
param_decomp_lab/autointerp/strategies/: canon.py  compact_skeptical.py  dispatch.py  dual_view.py  rich_examples.py
param_decomp_lab/clustering/: CLAUDE.md  activations.py  clustering_run_config.py  compute_costs.py  harvest_config.py  memberships.py  merge.py  merge_config.py  merge_history.py  paths.py  sample_membership.py  types.py
param_decomp_lab/clustering/configs/: pipeline-dev-simplestories.yaml  pipeline_config.yaml
param_decomp_lab/clustering/configs/crc/: example.yaml  pile_llama_simple_mlp-4L.json  ss_llama_simple_mlp-1L.json  ss_llama_simple_mlp-2L.json  ss_llama_simple_mlp.json
param_decomp_lab/clustering/math/: merge_distances.py  merge_matrix.py  merge_pair_samplers.py
param_decomp_lab/clustering/plotting/: activations.py  merge.py
param_decomp_lab/clustering/scripts/: __init__.py  calc_distances.py  get_cluster_mapping.py  run_clustering.py  run_harvest.py  run_merge.py  run_pipeline.py
param_decomp_lab/dataset_attributions/: CLAUDE.md  accumulator.py  config.py  pipeline.py  repo.py
param_decomp_lab/dataset_attributions/scripts/: run_merge.py  run_slurm.py  run_slurm_cli.py  run_worker.py
param_decomp_lab/editing/: README.md  editable_model.py
param_decomp_lab/eval_metrics/: CLAUDE.md  __init__.py  attn_patterns_recon_loss.py  ce_and_kl_losses.py  ci_hidden_acts_recon_loss.py  ci_histograms.py  ci_l0.py  ci_mean_per_component.py  component_activation_density.py  identity_ci_error.py  permuted_ci_plots.py  plotting.py  uv_plots.py
param_decomp_lab/experiments/: CLAUDE.md  utils.py
param_decomp_lab/experiments/lm/: data.py  gpt2_config.yaml  layerwise.py  llama-3.1-8b.yaml  pile_llama_simple_mlp-12L.yaml  pile_llama_simple_mlp-4L.yaml  pile_llama_simple_mlp-4L_layerwise.yaml  run.py  ss_llama_simple_mlp-2L.yaml
param_decomp_lab/experiments/lm/pretrain/: CLAUDE.md  cli.py  run_info.py  train.py
param_decomp_lab/experiments/lm/pretrain/configs/: gpt2_simple-2L.yaml  owt_llama_simple_mlp-12L-768.yaml  pile_llama_simple_mlp-12L-768.yaml  (+6 more)
param_decomp_lab/experiments/resid_mlp/: data.py  feature_importances.py  models.py  resid_mlp1_config.yaml  resid_mlp1_global_config.yaml  resid_mlp2_config.yaml  resid_mlp3_config.yaml  run.py  train_resid_mlp.py
param_decomp_lab/experiments/tms/: data.py  models.py  run.py  tms_40-10-id_config.yaml  tms_40-10_config.yaml  tms_5-2-id_config.yaml  tms_5-2_config.yaml  train_tms.py
param_decomp_lab/graph_interp/: CLAUDE.md  config.py  db.py  graph_context.py  interpret.py  ordering.py  prompts.py  repo.py  schemas.py
param_decomp_lab/graph_interp/scripts/: run.py  run_slurm.py  run_slurm_cli.py
param_decomp_lab/harvest/: CLAUDE.md  accumulator.py  analysis.py  config.py  db.py  intruder.py  pipeline.py  repo.py  reservoir.py  sampling.py  schemas.py
param_decomp_lab/harvest/harvest_fn/: __init__.py  base.py  clt.py  param_decomp.py  transcoder.py
param_decomp_lab/harvest/scripts/: compare_intruder_scores.py  run_intruder.py  run_intruder_slurm.py  run_intruder_slurm_cli.py  run_merge.py  run_slurm.py  run_slurm_cli.py  run_worker.py
param_decomp_lab/infra/: ddp_launch.py  git.py  hf_http.py  paths.py  pydantic.py  run_files.py  settings.py  slurm.py  sqlite.py  wandb.py
param_decomp_lab/investigate/: CLAUDE.md
param_decomp_lab/investigate/scripts/: run_agent.py  run_slurm.py  run_slurm_cli.py
param_decomp_lab/postprocess/: CLAUDE.md  __init__.py  cli.py  config.py
param_decomp_lab/resumption/: __init__.py  config.py  provenance.py
param_decomp_lab/scripts/: generate_token_divergence.py
param_decomp_lab/tests/: test_batch_and_loss_fns.py  test_data.py  test_eval.py  test_feature_importances.py  test_gather_all_tensors_distributed.py  test_gpt2.py  test_parse_wandb_run_path.py  test_permutation.py  test_pgd_source_sync_distributed.py  test_resid_mlp.py  test_resumption.py  test_seed_per_rank_distributed.py  test_settings.py  test_target_ci_solutions.py  test_tms.py
param_decomp_lab/tests/app/: test_app_tokenizer.py
param_decomp_lab/tests/autointerp/: test_decomposition_method.py  test_providers.py
param_decomp_lab/tests/clustering/: test_calc_distances.py  test_filter_dead_components.py  test_membership_builder.py  test_merge_config.py  test_merge_integration.py  test_merge_pair_samplers.py  test_run_clustering_happy_path.py
param_decomp_lab/tests/clustering/math/: test_perm_invariant_hamming.py
param_decomp_lab/tests/dataset_attributions/: test_storage.py
param_decomp_lab/tests/harvest/: test_harvester.py  test_reservoir.py  test_sampling.py
param_decomp_lab/topology/: __init__.py  canonical.py  gradient_connectivity.py  path_schemas.py  topology.py
param_decomp_lab/toy_models/: _linear_sum_assignment.py  target_ci.py
(+126 files in other folders)
