[project]
name = "param-decomp"
version = "0.0.1"
description = "Parameter Decomposition"
requires-python = "==3.13.*"
urls = { "Homepage" = "https://github.com/goodfire-ai/param-decomp" }
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "torch>=2.6",
    "pydantic<2.12", # https://github.com/goodfire-ai/param-decomp/pull/232 , https://github.com/goodfire-ai/param-decomp/issues/221
    "tqdm",
    "transformers",
    "jaxtyping",
    "einops",
    "matplotlib",
    "numpy",
    "python-dotenv",
    # `datasets` less than 2.21.0 causes issues due to incompatibility with numpy>=2.0
    # see:  https://github.com/huggingface/datasets/issues/6980  https://github.com/huggingface/datasets/pull/6991  (fixed in https://github.com/huggingface/datasets/releases/tag/2.21.0 )
    "datasets>=2.21.0",
    "pillow",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov", # for coverage reports
    "pytest-xdist", # parallel test execution
    "pytest-testmon", # only re-run tests affected by code changes
    "ruff",
    "basedpyright<1.32.0", # pyright and wandb issues, see https://github.com/goodfire-ai/param-decomp/pull/232
    "pre-commit",
    "scikit-learn",
    "ipykernel",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["param_decomp", "param_decomp.*"]
namespaces = false

[tool.uv.workspace]
members = ["param_decomp_lab"]

[tool.uv.sources]
param-decomp = { workspace = true }

[tool.ruff]
line-length = 100
fix = true
extend-exclude = ["param_decomp_lab/app/frontend"]

[tool.ruff.lint]
ignore = [
    "F722", # Incompatible with jaxtyping
    "E731", # I think lambda functions are fine in several places
    "E501", # there are a lot of long lines in the codebase
]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint.isort]
known-third-party = ["wandb"]

[tool.pyright]
include = ["param_decomp", "param_decomp_lab", "nano_param_decomp"]
exclude = ["**/wandb/**", "param_decomp_lab/_linear_sum_assignment.py", "param_decomp_lab/app/frontend"]
stubPath = "typings" # Having type stubs for transformers shaves 10 seconds off basedpyright calls

strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportFunctionMemberAccess = true
reportUnknownParameterType = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportOverlappingOverload = true
reportConstantRedefinition = true
reportImportCycles = true
reportPropertyTypeMismatch = true
reportMissingTypeArgument = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnusedExpression = true
reportMatchNotExhaustive = true
reportPrivateImportUsage = false
# basedpyright
reportCallIssue = true
reportAny = false
reportUnusedCallResult = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportExplicitAny = false
reportMissingTypeStubs = false
reportImplicitStringConcatenation = false
reportPrivateUsage = false
reportUnannotatedClassAttribute = false
reportUnknownLambdaType = false



[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
filterwarnings = [
    # https://github.com/google/python-fire/pull/447
    "ignore::DeprecationWarning:fire:59",
    # Ignore Pydantic V1 deprecation warnings from wandb_workspaces
    "ignore:Pydantic V1 style.*:DeprecationWarning:wandb_workspaces",
]
